--- a/src/main/resources/db.config
+++ b/src/main/resources/db.config
@@ -7,7 +7,8 @@
 		"DBUserName": "postgres",
 		"DBPassword": 123456,
 		"DBPoolNum": 5,
-		"ConnectionTimeout": 180
+		"ConnectionTimeout": 180,
+		"trim": "abc"
 	},
 	"other": {
 		"DBType": "ORACLE"
