--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,8 @@
+plugins {
+	id "org.jetbrains.kotlin.jvm" version "1.1.2"
+}
 group 'zym'
 version '0.1'
-
-buildscript {
-	ext.kotlin_version = '1.1.2-2'
-
-	repositories {
-		maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-		mavenCentral()
-	}
-	dependencies {
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-	}
-}
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
@@ -24,10 +15,10 @@ repositories {
 }
 
 dependencies {
-	compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+	compile "org.jetbrains.kotlin:kotlin-stdlib-jre8"
 	compile "org.postgresql:postgresql:42.+"
-	compile "com.alibaba:fastjson:1.+"
+	compile "com.alibaba:fastjson:+"
 	compile "org.apache.logging.log4j:log4j-api:+"
 	compile "org.apache.logging.log4j:log4j-core:+"
-	testCompile group: 'junit', name: 'junit', version: '4.12'
+	testCompile "junit:junit:+"
 }
