增加测试连接对象的代码

--- a/src/main/resources/db.config
+++ b/src/main/resources/db.config
@@ -1,17 +1,25 @@
 {
 	"default": {
 		"DBType": "PGSQL",
-		"DBServerAdd": "192.168.1.198",
+		"DBServerAdd": "10.10.10.198",
 		"DBServerPort": 5432,
 		"DBDataBaseName": "postgres",
 		"DBUserName": "postgres",
 		"DBPassword": 123456,
 		"DBPoolNum": 5,
 		"ConnectionTimeout": 180,
-		"trim": "abc"
+		"trim": "zym"
 	},
 	"other": {
-		"DBType": "ORACLE"
+		"DBType": "PGSQL",
+				"DBServerAdd": "10.10.10.198",
+    		"DBServerPort": 5432,
+    		"DBDataBaseName": "postgres",
+    		"DBUserName": "postgres",
+    		"DBPassword": 123456,
+    		"DBPoolNum": 10,
+    		"ConnectionTimeout": 180,
+    		"trim": ""
 	}
 }
 
