--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,5 @@ dependencies {
 	compile "com.alibaba:fastjson:+"
 	compile "org.apache.logging.log4j:log4j-api:+"
 	compile "org.apache.logging.log4j:log4j-core:+"
-	testCompile "junit:junit:+"
+	testCompile "junit:junit:4.+"
 }
