完成底层的数据访问与操作对象。 此对象每次调用需要请求一次操作对象, 多次操作需要使用beginTran发起一个事务,同时事务最后需要使用commit或rollback方法关闭此对象。

--- a/src/main/resources/db.config
+++ b/src/main/resources/db.config
@@ -1,12 +1,12 @@
 {
-	"default": {
+		"default": {
 		"DBType": "PGSQL",
-		"DBServerAdd": "10.10.10.198",
+		"DBServerAdd": "localhost",
 		"DBServerPort": 5432,
-		"DBDataBaseName": "postgres",
+		"DBDataBaseName": "supp",
 		"DBUserName": "postgres",
-		"DBPassword": 123456,
-		"DBPoolNum": 30,
+		"DBPassword": "postgres",
+		"DBPoolNum": 3,
 		"ConnectionTimeout": 180,
 		"trim": "zym"
 	},
