--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "org.jetbrains.kotlin.jvm" version "1.1.2"
+	id "org.jetbrains.kotlin.jvm" version "1.1.51"
 }
 group 'zym'
 version '0.1'
@@ -16,9 +16,11 @@ repositories {
 
 dependencies {
 	compile "org.jetbrains.kotlin:kotlin-stdlib-jre8"
-	compile "org.postgresql:postgresql:42.+"
+	compile "org.postgresql:postgresql:+"
 	compile "com.alibaba:fastjson:+"
 	compile "org.apache.logging.log4j:log4j-api:+"
 	compile "org.apache.logging.log4j:log4j-core:+"
+	compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:+'
+//	compile files('${java.home}/../lib/rt.jar')
 	testCompile "junit:junit:4.+"
 }
