--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	compile "com.alibaba:fastjson:+"
 	compile "org.apache.logging.log4j:log4j-api:+"
 	compile "org.apache.logging.log4j:log4j-core:+"
-	compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:+'
+	compile "com.fasterxml.jackson.core:jackson-core:+"
+	compile "com.fasterxml.jackson.core:jackson-annotations:+"
+	compile "com.fasterxml.jackson.core:jackson-databind:+"
+	compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:+"
 	testCompile "junit:junit:4.+"
 }
